--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -1,5 +1,5 @@
 
-		
+
 
 @font-face {
   font-family: 'robotolight';
@@ -126,7 +126,10 @@ sub {
 }
 
 img {
-  border: 0;
+ margin-right: 250px;
+  border-radius: 30px;
+  width: 200px;
+
   -ms-interpolation-mode: bicubic;
 }
 
@@ -258,14 +261,16 @@ h1, h2, h3, h4, h5 {
   background: white;
   color: #555;
   font-family: 'robotolight';
-  padding: 30px;
-  margin-top: 30px;
+  padding: 50px;
+  margin: 30px 0;
 }
+
 .box-content .widget-title {
   font-size: 22px;
   color: #333;
   font-family: 'robotolight';
-  margin-bottom: 30px;
+  margin: 10px 0;
+
 }
 
 .welcome-text {
@@ -413,7 +418,7 @@ h1, h2, h3, h4, h5 {
 .logo-top-margin {
   position: relative;
   margin-top: 120px;
-  margin-left: 45%;
+  margin-left: 38%;
 }
 @media screen and (max-width: 992px) {
   .logo-top-margin {
@@ -512,8 +517,8 @@ h1, h2, h3, h4, h5 {
 
 .profile-role {
   font-size: 12px;
-  margin-bottom: 20px;
   display: block;
+  line-height: 20px;
 }
 
 .about-social {
@@ -607,6 +612,7 @@ h1, h2, h3, h4, h5 {
 .project-pages a:hover {
   background: #5cb48e;
   color: white;
+  /*transform: rotateZ(360deg);*/
 }
 
 /*------ contact ------ */
@@ -645,3 +651,68 @@ h1, h2, h3, h4, h5 {
 
 
 /* Custom */
+.company{
+    margin-bottom: 10px;
+}
+
+#menu-4 .myProject{
+    width: 80%;
+    box-shadow:-3px 0 3px rgb(240,240,240), /*左边阴影*/
+    3px 0 3px rgb(240,240,240), /*右边阴影*/
+    0 -3px 3px rgb(240,240,240), /*顶部阴影*/
+    0 3px 3px rgb(240,240,240); /*底边阴影*/
+    margin: 20px auto;
+}
+#menu-4 .myProject h1{
+    font-size: 30px;
+    color:#ccc;
+    font-family: serif;
+    margin-bottom: 20px;
+    background-color: rgb(45, 58,52);
+}
+.con h2{
+    font-size: 27px;
+    color:rgb(45, 58,52);
+    font-family: serif;
+    line-height: 50px;
+}
+.con h3{
+    font-size: 20px;
+    color:#ccc;
+    line-height: 30px;
+    font-family: serif;
+}
+.kong{
+    width: 100%;
+    height: 10px;
+    background-color:rgb(149,149,149);
+}
+.con article{
+    margin: 10px 0;
+}
+.con article p{
+    line-height: 30px;
+    font-size: 14px;
+}
+.intro-myself{
+    position: absolute;
+    width: 55%;
+    margin-left:250px;
+    font-size: 17px;
+    line-height: 30px;
+}
+#menu-3 .box-content #intro{
+    width: 220px;
+    border-radius: 50%;
+    -webkit-animation: xuanzhuan 1s linear ;
+    -webkit-animation-fill-mode:forwards;
+}
+
+@-webkit-keyframes xuanzhuan {
+ 	0%{
+ 		-webkit-transform: rotateY(0deg);
+ 	}
+    100%{
+ 		-webkit-transform: rotateY(180deg);
+ 	}
+ }
